# progetto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  ReteNeurale  ReteNeuraleTest  cmake_install.cmake  compile_commands.json  main.cpp
images/: BobaFett.avif  Fiore.jpg:Zone.Identifier  Grogu2.png~RF6f9ec2a.TMP  Grogu2.png~RF6fabda3.TMP  Homer.jpg:Zone.Identifier  Luigi.png:Zone.Identifier  R2D2.png~RF6ff84f7.TMP  R2D2.xcf  Toad.jpg:Zone.Identifier  Vader.png~RF70029c3.TMP  Vader3.jfif  Yoda.xcf  Yoda2.jfif
images2/images/: Bowser.png:Zone.Identifier  Falcon.jfif  Mario.png:Zone.Identifier  Maul.jfif  Peach.png:Zone.Identifier  Toad.png:Zone.Identifier  Vader.jfif
rete_neurale/: acquisition.cpp  acquisition.hpp  interfacciaUtente.cpp  interfacciaUtente.hpp  matrix.cpp  matrix.hpp  pattern.cpp  pattern.hpp  recall.hpp  train.cpp  train.hpp  userInterface.cpp
test/: acquisition_test.cpp  matrix_test.cpp  pattern_test.cpp  test_runner.cpp
